Fix align of some input in ticket form + fix icons of urgency and impact

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -201,3 +201,11 @@ p {
 .type-selected {
   color: #29B6F6;
 }
+
+.input-right input {
+  text-align: right;
+  /* IF YOU ALSO WANT TO PUSH PLACHEHOLDER TO THE RIGHT USE THE FOLLOWING, IF NOT JUST DELETE THE ::-webkit-input-placeholder*/
+  ::-webkit-input-placeholder {
+    text-align: right;
+  }
+}
